feat: update openapi with resolve tenant
